--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,12 +9,12 @@ updates:
       interval: "weekly"
       day: "monday"
       time: "09:00"
-      timezone: "Etc/UTC"  
+      timezone: "Asia/Riyadh"
     open-pull-requests-limit: 10
     target-branch: "main"
     labels:
       - "dependencies"
-      - "npm"
+    versioning-strategy: "auto"
     allow:
       - dependency-type: "direct"
     security-updates-only: false
@@ -23,5 +23,5 @@ updates:
         update-types: ["version-update:semver-major"]
     commit-message:
       prefix: "deps"
-      prefix-development: "dev-deps"
       include: "scope"
+
