--- a/package.json
+++ b/package.json
@@ -7,16 +7,26 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "test": "jest --coverage",
+        "lint": "eslint .",
+        "format": "prettier --write .",
+        "prepare": "husky install"
     },
     "devDependencies": {
+        "@babel/eslint-parser": "^7.25.9",
         "axios": "^1.7",
         "bootstrap": "^5.0.0",
         "cross-env": "^5.1",
+        "eslint": "^8.0.0",
+        "eslint-plugin-vue": "^9.31.0",
+        "husky": "^8.0.0",
+        "jest": "^29.0.0",
         "jquery": "^3.2",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.21",
         "popper.js": "^1.12",
+        "prettier": "^3.0.0",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.20.1",
         "sass-loader": "7.*",
