--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
@@ -14,23 +15,32 @@
         "prepare": "husky install"
     },
     "devDependencies": {
+        "@babel/core": "^7.26.0",
         "@babel/eslint-parser": "^7.25.9",
+        "@eslint/js": "^9.14.0",
+        "@vue/eslint-config-typescript": "^14.1.3",
         "axios": "^1.7",
         "bootstrap": "^5.0.0",
+        "braces": "^3.0.3",
         "cross-env": "^5.1",
-        "eslint": "^8.0.0",
+        "eslint": "^9.0.0",
         "eslint-plugin-vue": "^9.31.0",
+        "globals": "^15.12.0",
         "husky": "^8.0.0",
         "jest": "^29.0.0",
         "jquery": "^3.2",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.21",
+        "micromatch": "^4.0.8",
         "popper.js": "^1.12",
         "prettier": "^3.0.0",
         "resolve-url-loader": "^5.0.0",
-        "sass": "^1.20.1",
-        "sass-loader": "7.*",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "sass": "^1.80.7",
+        "sass-loader": "^16.0.3",
+        "terser-webpack-plugin": "^5.3.10",
+        "vue": "^3.5.12",
+        "vue-template-compiler": "^0.1.0",
+        "watchpack": "^2.4.2",
+        "webpack": "^5.96.1"
     }
 }
