--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "private": true,
-    "type": "module",
+    "type": "commonjs",
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --config=node_modules/laravel-mix/setup/webpack.config.js",
         "test": "jest --coverage",
         "lint": "eslint .",
         "format": "prettier --write .",
@@ -18,6 +18,7 @@
         "@babel/core": "^7.26.0",
         "@babel/eslint-parser": "^7.25.9",
         "@eslint/js": "^9.14.0",
+        "@vue/compiler-sfc": "^3.2.0",
         "@vue/eslint-config-typescript": "^14.1.3",
         "axios": "^1.7",
         "bootstrap": "^5.0.0",
@@ -38,9 +39,9 @@
         "sass": "^1.80.7",
         "sass-loader": "^16.0.3",
         "terser-webpack-plugin": "^5.3.10",
-        "vue": "^3.5.12",
-        "vue-template-compiler": "^0.1.0",
+        "vue": "^3.2.0",
+        "vue-loader": "^16.2.0",
         "watchpack": "^2.4.2",
-        "webpack": "^5.96.1"
+        "webpack": "^5.72.0"
     }
 }
