--- a/.env.example
+++ b/.env.example
@@ -35,8 +35,8 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+MIX_PUSHER_APP_KEY=
+MIX_PUSHER_APP_CLUSTER=
 
 POSTS_PER_PAGE=
 
