Refactor GitHub Actions workflow and update API documentation structure

--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -5,13 +5,9 @@ permissions:
 
 on:
   push:
-    branches:
-      - main
-      - master
+    branches: [main, master]
   pull_request:
-    branches:
-      - main
-      - master
+    branches: [main, master]
 
 jobs:
   deploy-doc:
@@ -19,8 +15,7 @@ jobs:
     name: Deploy API documentation on Bump.sh
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: Deploy API documentation
         uses: bump-sh/github-action@v1
         with:
@@ -28,13 +23,15 @@ jobs:
           token: ${{ secrets.BUMP_TOKEN }}
           file: ./doc/api-documentation.yml
           hub: saidtech
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   api-diff:
     if: ${{ github.event_name == 'pull_request' }}
     name: Check API diff on Bump.sh
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: Comment pull request with API diff
         uses: bump-sh/github-action@v1
         with:
@@ -43,4 +40,5 @@ jobs:
           file: doc/api-documentation.yml
           command: diff
           hub: saidtech
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
